--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "vue": "^2.5.2"
+    "lodash": "^4.17.4",
+    "vue": "^2.5.2",
+    "vue-resource": "^1.3.5"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
